# Neural-Network

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Main.cpp  Main.vcxproj  Main.vcxproj.filters  Neural Network.sln  NeuralNetwork.h  Neural_Network.sln  Neural_Network.vcxproj  README.md  Test-Image-Processing.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Neural Network/: Neural Network.vcxproj
